# ska-spc-tender-benchmarks

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md
askap/: README.md  build.sh  compile_errors_correction.patch  run.sh
askap/cmake_files/: CMakeLists.txt
askap/cmake_files/tConvolveACC/: CMakeLists.txt
askap/cmake_files/tConvolveMPI/: CMakeLists.txt
askap/cmake_files/tHogbomCleanACC/: CMakeLists.txt
askap/cmake_files/tHogbomCleanOMP/: CMakeLists.txt
askap/cmake_files/tMajorACC/: CMakeLists.txt
askap/spack/: spack.yaml
benchmarks-common/: CMakeLists.txt
benchmarks-common/inc/: benchmarks_common.h  benchmarks_timer.h  hpallocator.h
benchmarks-common/src/: benchmarks_common.cpp
config/: dispatcher.sh  epfl_scitas.sh  generic.sh
fft/: CMakeLists.txt  README.md
fft/examples/: cpu.yaml  gpu.yaml  nvidia.yaml
fft/inc/: benchmark_cpu.h  benchmark_nvidia.h  cufft_utils.h  fft_benchmark.h  fft_check.h  fft_configuration.h
fft/spack/: Dockerfile  spack.yaml
fft/spack/test/: Dockerfile
fft/src/: benchmark_cpu.cpp  benchmark_nvidia.cpp  fft_benchmark.cpp  fft_benchmark_fftw.cpp  fft_benchmark_heffte_cpu.cpp  fft_benchmark_heffte_gpu.cpp  fft_benchmark_mkl.cpp  fft_configuration.cpp  main.cpp
gridding/: CMakeLists.txt
gridding/examples/: example-cpu-only.yaml  example.yaml  example_degridding.yaml  example_degridding_cpu.yaml  example_gridding_cpu.yaml
gridding/inc/: common_gridding.cuh  common_gridding.h  degridding_benchmark.h  gridding_benchmark.h  gridding_configuration.h  gridding_initialization.h  math.cuh  math.hpp  types.hpp  util.cuh
gridding/src/: degridding_benchmark.cpp  degridding_benchmark.cu  degridding_benchmark_sycl.cpp  gridding_benchmark.cpp  gridding_benchmark.cu  gridding_benchmark_sycl.cpp  gridding_configuration.cpp  gridding_initialization.cpp  main.cpp
hpcg/: CMakeLists.txt  setup.sh
osu/: run.sh  setup.sbatch  setup.sh
spack/: spack.yaml
